created all 20 requests

--- a/src/main/resources/static/competition.html
+++ b/src/main/resources/static/competition.html
@@ -14,6 +14,70 @@
     <!--<div class="row">
         <div class="col-md12">-->
     <div class="container-fluid"><!--<div class="panel panel-default">-->
+        <div class="datagrid">
+            <table>
+                <tbody>
+                <tr>
+                    <th class="my-th" >
+                        <a href="\type_of_sport_building.html" style="color: white">Типи споруд</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\sport_building.html" style="color: white">Спортивні споруди</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\gym.html" style="color: white">Спортивні зали</a>
+                    </th>
+                    <th class="my-th">
+                        <a href="\stadium.html" style="color: white">Стадіони</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\sport_arena.html" style="color: white">Спортивні манежі</a>
+                    </th>
+                    <th class="my-th">
+                        <a href="\pool.html" style="color: white">Басейни</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\court.html" style="color: white">Корти</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\type_of_cover.html" style="color: white">Типи покриття</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\kind_of_sport.html" style="color: white">Види спорту</a>
+                    </th>
+                </tr>
+                <tr>
+                    <th  class="my-th">
+                        <a href="\sport_club.html" style="color: white">Спортивні клуби</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\coach.html" style="color: white">Тренери</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\sportsman.html" style="color: white">Спортсмени</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\sport_category.html" style="color: white">Спортивні розряди</a>
+                    </th>
+                    <th class="my-th">
+                        <a href="\sportsman_sport_coach.html" style="color: white">Спорт і спортсмени</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\sport_building_sport.html" style="color: white">Спорт в спорт.будівлях</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\organizer.html" style="color: white">Організатори змагань</a>
+                    </th>
+                    <th  class="my-th-selected">
+                        <a style="color: white">Змагання</a>
+                    </th>
+                    <th  class="my-th">
+                        <a href="\sportsman_competition.html" style="color: white">Учасники змагань</a>
+                    </th>
+                </tr>
+                </tbody>
+            </table>
+        </div>
         <div class="panel-heading"> Змагання </div>
         <div class="datagrid">
 
