--- a/src/main/resources/static/request3_1.html
+++ b/src/main/resources/static/request3_1.html
@@ -5,10 +5,25 @@
     <title>Запит №3.1</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
-<body ng-app = "kursova" style="margin: 15px">
-<div  style="margin-top: 30px" ng-controller = "AppCtrl as ctrl" ><!--class="container"-->
-    <!--<div class="row">
-        <div class="col-md12">-->
+<body ng-app = "kursova" style="margin-left: 15px; margin-right: 15px" >
+<div  style="margin-top: 5px" ng-controller = "AppCtrl as ctrl" >
+    <div   align="right"  class="div-navigation-panel" style="margin-left: 0px;margin-right: 0px;">
+        <table>
+            <tbody >
+            <tr>
+                <th>
+                    <a href="\main.html" style="color: #7f6040;">Головна</a>
+                </th>
+                <th>
+                    <a href="\coach.html" style="color: #7f6040;">Таблиці</a>
+                </th>
+                <th>
+                    <a  style="color: #57c548; text-decoration-color: white">Запити</a>
+                </th>
+            </tr>
+            </tbody>
+        </table>
+    </div>
     <div class="container-fluid"><!--<div class="panel panel-default">-->
         <div class="datagrid" >
             <table>
