--- a/src/main/resources/static/coach.html
+++ b/src/main/resources/static/coach.html
@@ -10,9 +10,26 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-app = "kursova">
-<div  style="margin-top: 30px" ng-controller = "AppCtrl as ctrl" ><!--class="container"-->
+<div  style="margin-top: 5px" ng-controller = "AppCtrl as ctrl" ><!--class="container"-->
     <!--<div class="row">
         <div class="col-md12">-->
+    <div   align="right"  class="div-navigation-panel">
+        <table>
+            <tbody >
+            <tr>
+                <th>
+                    <a href="\main.html" style="color: #7f6040;">Головна</a>
+                </th>
+                <th>
+                    <a style="color: #57c548;">Таблиці</a>
+                </th>
+                <th>
+                    <a href="\request1_1.html" style="color: #7f6040;">Запити</a>
+                </th>
+            </tr>
+            </tbody>
+        </table>
+    </div>
     <div class="container-fluid"><!--<div class="panel panel-default">-->
         <div class="datagrid">
         <table>
@@ -78,7 +95,7 @@
             </tbody>
         </table>
         </div>
-        <div class="panel-heading"> Тренери </div>
+        <div class="panel-heading">Тренери</div>
         <div class="datagrid">
 
             <table ><!--class="table table-striped"-->
