--- a/src/main/resources/static/stadium.html
+++ b/src/main/resources/static/stadium.html
@@ -10,9 +10,26 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-app = "kursova">
-<div  style="margin-top: 30px" ng-controller = "AppCtrl as ctrl" ><!--class="container"-->
+<div  style="margin-top: 5px" ng-controller = "AppCtrl as ctrl" ><!--class="container"-->
     <!--<div class="row">
         <div class="col-md12">-->
+    <div   align="right"  class="div-navigation-panel">
+        <table>
+            <tbody >
+            <tr>
+                <th>
+                    <a href="\main.html" style="color: #7f6040;">Головна</a>
+                </th>
+                <th>
+                    <a style="color: #57c548;">Таблиці</a>
+                </th>
+                <th>
+                    <a href="\request1_1.html" style="color: #7f6040;">Запити</a>
+                </th>
+            </tr>
+            </tbody>
+        </table>
+    </div>
     <div class="container-fluid"><!--<div class="panel panel-default">-->
         <div class="datagrid">
             <table>
@@ -89,8 +106,8 @@
                     <!--<th>Id спортивної споруди</th>-->
                     <th>Вмістимість</th>
                     <th>Площа поля</th>
-                    <th>Наявність<br>доріжок для бігу</th>
-                    <th>Наявність<br>гімнастичної зони</th>
+                    <th>Наявність доріжок для бігу</th>
+                    <th>Наявніст гімнастичної зони</th>
                     <th width="80px" style="padding-left: 9px">
                         <button type="button" class="btn-success" data-toggle="modal" data-target="#addModal"
                                 style="width: 60px;cursor:pointer" ng-click="ctrl.start_insert_stadium()">
