--- a/src/main/resources/static/request1_1.html
+++ b/src/main/resources/static/request1_1.html
@@ -5,7 +5,7 @@
     <title>Запит №1.1</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
-<body ng-app = "kursova" style="margin-left: 15px; margin-right: 15px" >
+<body ng-app = "kursova" style="margin-left: 15px; margin-right: 15px;margin-top: 0px" >
 <div  style="margin-top: 5px" ng-controller = "AppCtrl as ctrl" >
     <div   align="right"  class="div-navigation-panel" style="margin-left: 0px;margin-right: 0px;">
         <table>
@@ -24,7 +24,7 @@
             </tbody>
         </table>
     </div>
-    <div class="container-fluid"><!--<div class="panel panel-default">-->
+    <div class="container-fluid" ><!--<div class="panel panel-default">-->
         <div class="datagrid" >
             <table>
                 <tbody>
