--- a/src/main/resources/static/sportsman.html
+++ b/src/main/resources/static/sportsman.html
@@ -102,7 +102,7 @@
                 <thead>
                 <tr>
                     <th width="40px">Id</th>
-                    <th>П. І. Б.</th>
+                    <th>Прізвище та ініціали</th>
                     <th>Вік</th>
                     <th>Стать</th>
                     <th>Спортивний клуб</th>
