--- a/src/main/resources/static/stadium.html
+++ b/src/main/resources/static/stadium.html
@@ -105,7 +105,7 @@
                     <th>Спортивна споруда</th>
                     <!--<th>Id спортивної споруди</th>-->
                     <th>Вмістимість</th>
-                    <th>Площа поля</th>
+                    <th>Площа поля (м^2)</th>
                     <th>Наявність доріжок для бігу</th>
                     <th>Наявніст гімнастичної зони</th>
                     <th width="80px" style="padding-left: 9px">
